--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 server.port = 8083
 
 #mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/testboard
-spring.datasource.username = root
-spring.datasource.password = 1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/testboard
+#spring.datasource.username = root
+#spring.datasource.password = 1234
+
+
+# h2 [ ??? ???? DB ( ??? ?? ) / ???? = ??? ????? ? ??? ]
+spring.h2.console.enabled=true
+# h2 JDBC URL [ ? ??? console?? ?? ]
+spring.datasource.url=jdbc:h2:mem:mydb
+# h2 username , password [ ? ??? username=sa, password=?? ]
+spring.datasource.username=admin
+spring.datasource.password=1234
+
 
 spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto = update
